--- a/holamundo.html
+++ b/holamundo.html
@@ -1,10 +1,49 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hola mundo</title>
-  </head>
-  <p>Hola soy Byron nos besamos</p>
-  <body>
-    <script>alert(“Bienvenido”);</script>
-  </body>
+     <style>
+          table, th, td{
+               border: 1px solid black;
+               border-collapse: collapse;
+          }
+          th, td{
+               padding; 10px
+          }
+     </style>
+     <head>
+         <meta charset="utf-8">
+          <title>Mi pagina para programación</title>
+           <script> alert("hola mundo"); </script>
+     </head>
+     <body>
+         <p>Esta es mi pagina</p>
+         <p>Axel Miguel Huerta Fitz</p>
+          <table>
+               <tr>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Sexo</th>
+                    <th>Correo Electronico</th>
+               </tr>
+               <tr>
+                    <td>Axel</td>
+                    <td>Huerta</td>
+                    <td>H</td>
+                    <td>huertaaxl27@gmail.com</td>
+               </tr>
+               </tr>
+               <tr>
+                    <td>Sandra</td>
+                    <td>Azuara</td>
+                    <td>M</td>
+                    <td>azuarasandra69@gmail.com</td>
+               </tr>
+          </tr>
+               <tr>
+                    <td>Alan</td>
+                    <td>Amador</td>
+                    <td>H</td>
+                    <td>alamador800@gmail.com</td>
+               </tr>
+          </table>
+     </body>          
 </html>
