--- a/holamundo.html
+++ b/holamundo.html
@@ -16,7 +16,7 @@
      </head>
      <body>
          <p>Esta es mi pagina</p>
-         <p>Axel Miguel Huerta Fitz</p>
+         <p>Juan Diego Lopez Carlos</p>
           <table>
                <tr>
                     <th>Nombre</th>
@@ -25,24 +25,24 @@
                     <th>Correo Electronico</th>
                </tr>
                <tr>
-                    <td>Axel</td>
-                    <td>Huerta</td>
-                    <td>H</td>
-                    <td>huertaaxl27@gmail.com</td>
+                    <td>Juan</td>
+                    <td>Diego</td>
+                    <td>h</td>
+                    <td>diegolopez6557@gmail.com</td>
                </tr>
                </tr>
                <tr>
-                    <td>Sandra</td>
-                    <td>Azuara</td>
+                    <td>Jose</td>
+                    <td>Hernandez</td>
                     <td>M</td>
-                    <td>azuarasandra69@gmail.com</td>
+                    <td>josehdz735@gmail.com</td>
                </tr>
           </tr>
                <tr>
-                    <td>Alan</td>
-                    <td>Amador</td>
-                    <td>H</td>
-                    <td>alamador800@gmail.com</td>
+                    <td>Dayana</td>
+                    <td>Beltran</td>
+                    <td>M</td>
+                    <td>dayanarubi7335@gmail.com</td>
                </tr>
           </table>
      </body>          
