--- a/holamundo.html
+++ b/holamundo.html
@@ -39,7 +39,7 @@
                </tr>
           </tr>
                <tr>
-                    <td>Dayana</td>
+                    <td>Rubi</td>
                     <td>Beltran</td>
                     <td>M</td>
                     <td>dayanarubi7335@gmail.com</td>
